2005-03-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Added and updated
	  various scanners. 

2005-03-04  Gerard Klaver <gerard at gkall dot hobby dot nl>

        * doc/sane-teco2.man: text update
	  backends/teco2: use of __unused__
				      
2005-03-03  Julien Blache <jb@jblache.org>
	* tools/hotplug-ng/libsane.hotplug: add missing quote in the grep line.

2005-03-02  Julien Blache <jb@jblache.org>
	* tools/hotplug-ng/libsane.hotplug: allow for several spaces
	between fields in the db file.

2005-02-28  Julien Blache <jb@jblache.org>
	* tools/hotplug-ng/libsane.hotplug: replace \t by [[:space:]] when
	grepping for the device in the db file.

2005-02-21  Julien Blache <jb@jblache.org>
	* tools/hotplug-ng: added new hotplug/hotplug-ng hook, with
	scripts and documentation.

2005-02-20  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Removed Genius
	  ColorPage-Vivid Pro II, now in external backend. Added Visioneer
	  9000.
	* AUTHORS configure configure.in backend/Makefile.in
	  backend/dll.conf backend/sm3840.c backend/sm3840.conf
	  backend/sm3840.h backend/sm3840_lib.c backend/sm3840_lib.h
	  backend/sm3840_params.h backend/sm3840_scan.c doc/Makefile.in
	  doc/sane-sm3840.man doc/sane.man doc/descriptions/sm3840.desc:
	  Added sm3840 backend (from "Earle F. Philhower, III"
	  <earlephilhower@yahoo.com>).
	* doc/descriptions-external/sm3840.desc: Removed (backend included
	  in SANE).
	* NEWS: Updated.

2005-02-14  Gerhard Jaeger <gerhard@gjaeger.de>

*	doc/descriptions-external: Added new external backend geniusvp2.

2005-02-10  Karl Heinz Kremer <khk@khk.net>

	* doc/descriptions/epson.desc: Added CX-3600 and 3650
	  doc/sane-epson.man, backend/epson.conf: Added information about
	  GT-6500 (bug #301100)

2005-02-08  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.h backend/snapscan.conf