@@ -1,3 +1,5 @@
 # usb vendor product
 # Microtek ScanMaker 3840 ID
 usb 0x05da 0x30d4
+# Microtek ScanMaker 4800 ID
+usb 0x05da 0x30cf
